--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,292 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  width: 500px;
+  margin: 50px auto;
+  padding: 10px;
+  border-radius: 8px;
 }
+
+.App h1{
+  text-align: center;
+}
+
+.form{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 12px
+}
+
+.update-form{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 12px
+}
+
+.form input[type="text"]{
+  padding:10px;
+  width: 85%;
+  border: 1px solid #eee;
+  border-radius: 6px;
+}
+
+.update-new-input{
+  width: 85%;
+  border-radius: 6px;
+  border: 1px solid #eee;
+  padding: 10px;
+  /* outline: none; */
+}
+
+.form input[type="text"]:focus,
+.form button[type="submit"]:focus{
+  outline:none;
+}
+
+.display-criteria{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.criteria-item{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px
+}
+.criteria-content{
+  width: 60%
+}
+.criteria button{
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  padding: 8px
+}
+.criteria button:focus{
+  outline:none
+}
+
+.delete-criteria{
+  background-color: rgb(249, 244, 244);
+  color:rgb(7, 7, 7);
+} 
+
+ul{
+  display: flex;
+  list-style: none;
+  /* background-color: black; */
+  padding:1em;
+  box-shadow:2px 2px 10px black
+}
+
+ul li{
+  margin:0 1em;
+  font-size:1.1rem;
+  color:black;
+}
+
+
+.edit{
+  display: flex;
+  justify-content: space-between;
+}
+
+/* .form button[type="submit"]{
+  background-color: #008080;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  padding: 10px;
+  cursor: pointer
+} */
+
+/* .update-criteria{
+  background-color: goldenrod;
+  color:#fff;
+}
+.delete-criteria{
+  background-color: red;
+  color:#fff;
+} */
+/* .update-form{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.update-new-input{
+  width: 80%;
+  border-radius: 6px;
+  border: 1px solid #eee;
+  padding: 8px;
+  outline: none;
+}
+.update-new-btn{
+  background-color: darkorchid;
+  color: #fff;
+  cursor: pointer;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
